# parseargs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Notes.md  README.md  build.rs  index.html  parseargs-man.html
.github/workflows/: build-and-test.yaml  deploy-doc.yaml  development-release.yaml  release.yaml  snapshot-release.yaml  verify.yaml
doc/: Makefile  option-definition.ebnf  parseargs.1.adoc  spell.utf-8.add  tutorial.adoc
doc/examples/: args-cb.sh  error-cb.sh  example.sh  help.sh  long-opt.sh  mode-switch.sh  no-opt.sh  option-cb.sh  remainder.sh  required.sh  setup-path  verbosity.sh
example/: all-in.sh  simple.sh  test.sh
inttest/: _test.shinc  run.sh  test-all-chars.sh  test-basic.sh  test-callbacks.sh  test-invalid-utf8.sh  test-long-cmdline.sh  test-opt-def-errors.sh  test-remainder.sh
script-test/: README.md  _test.shinc  run.sh  s-test-shellcheck.sh  test-all-chars.sh  test-basic.sh  test-callbacks.sh  test-invalid-utf8.sh  test-iso8859-1-charset.sh  test-opt-def-errors.sh  test-remainder.sh
src/: arg_parser.rs  cmd_line.rs  main.rs  opt_def.rs  parseargs.rs  shell_code.rs
tests/: basics.rs  code_gen.rs  exec.rs  optdef_errors.rs
