[package]
name = "parseargs"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Schandl"]
description = "A command line options parser for shell scripts"
license = "MIT"
homepage = "https://rakus.github.io/parseargs/"
repository = "https://github.com/rakus/parseargs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/parseargs", dest = "/usr/bin/parseargs", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/parseargs/", mode = "644", doc = true },
    { source = "target/doc/parseargs.1.gz", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]

[package.metadata.deb]
license-file = "LICENSE"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [ "target/release/parseargs", "/usr/bin/", "755" ],
    [ "LICENSE", "/usr/share/doc/parseargs/", "644" ],
    [ "target/doc/parseargs.1.gz", "/usr/share/man/man1/", "644" ],
]

